Fixed treeview scrollbar a bit

--- a/theme/css/angular.treeview.css
+++ b/theme/css/angular.treeview.css
@@ -83,11 +83,6 @@ div[data-angular-treeview] {
     font-size:13px;
     color: #555;
     text-decoration: none;
-
-    /* scrollbars */
-    overflow:auto;
-    overflow-x:scroll;
-    overflow-y:scroll;
 }
 
 div[data-tree-model] ul {
